[package]
name = "webhookee"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
anyhow = "1.0"
simplelog = "0.10.0"
log = "0.4"
ring = "0.16"
hex = "0.4.3"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0.7"
tempfile = "3.2.0"
futures = "0.3"
process_control = "3.1"
